--- a/web-application-server/src/main/resources/application.yml
+++ b/web-application-server/src/main/resources/application.yml
@@ -20,4 +20,6 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
         format_sql: true
+        use_sql_comments: true
+        generate_statistics: true
 
