* fix : change DB logging setting

--- a/web-application-server/src/main/resources/application.yml
+++ b/web-application-server/src/main/resources/application.yml
@@ -23,7 +23,16 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        show_sql: true
+        show_sql: false
         format_sql: true
         use_sql_comments: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
+        orm.jdbc.bind: TRACE
+
+
 
