* chore : add .http env to .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -463,3 +463,4 @@ modules.xml
 *.ipr
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+iml,intellij+all
+/http-client.private.env.json
