* deploy : separate dev and prod env

--- a/web-application-server/src/main/resources/application.yml
+++ b/web-application-server/src/main/resources/application.yml
@@ -1,59 +1,3 @@
-server:
-  servlet:
-    # context path
-    context-path: /api/v1
-
 spring:
-  application:
-    name: web-application-server
-
-  config:
-    import: optional:file:.env[.properties]
-
-  servlet:
-    # file upload
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
-
-  # Database
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-
-  jpa:
-    hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        show_sql: false
-        format_sql: true
-        use_sql_comments: true
-
-  # aws
-  cloud:
-    aws:
-      credentials:
-        access-key: ${AWS_ACCESS_KEY}
-        secret-key: ${AWS_SECRET_KEY}
-      region:
-        static: ${AWS_REGION}
-      s3:
-        bucket: ${AWS_S3_BUCKET_NAME}
-
-# logging
-logging:
-  level:
-    org:
-      hibernate:
-        SQL: DEBUG
-        orm.jdbc.bind: TRACE
-
-
-
-
-
-
+  profiles:
+    default: dev
