--- a/postgresDB/Dockerfile
+++ b/postgresDB/Dockerfile
@@ -1,13 +1,11 @@
 #PostgreSQL 15 버전을 베이스 이미지로 사용
 FROM postgres:15
 
+#init.sql
+COPY ./init/init.sql /docker-entrypoint-initdb.d/
+
 #postgresql.conf파일을 /etc/postgresql/postgresql.conf 로 복사, 기본 설정 파일을 덮어쓰기하여 새로운 설정 적용
 COPY ./config/postgresql.conf /etc/postgresql/custom.conf
-
-#계정정보 설정
-ENV POSTGRES_USER=${POSTGRES_USER}
-ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-ENV POSTGRES_DB=${POSTGRES_DB}
 
 EXPOSE 5432
 
