--- a/postgresDB/config/postgresql.conf
+++ b/postgresDB/config/postgresql.conf
@@ -8,7 +8,7 @@ authentication_timeout = 5min   # 인증 시간 초과 시간 (5분)
 password_encryption = scram-sha-256    # 패스워드 암호화 방식
 
 # QUERY TUNING
-work_mem = 64MB              # 개별 연결에서 사용 가능한 메모리 양
+work_mem = 128MB              # 개별 연결에서 사용 가능한 메모리 양
 shared_buffers = 256MB       # 공유 메모리 버퍼 크기
 effective_cache_size = 1GB   # 임시 파일 및 인덱스 생성 시 사용할 메모리 크기
 
@@ -18,8 +18,8 @@ logging_collector = off        # 로그 수집기를 사용하도록 설정
 
 # REPLICATION
 # 나중에 처리할 것
-; wal_level = replica          # 스트리밍 복제 구성
-; max_wal_senders = 5          # 스트리밍 복제 전송자의 최대 수
+# wal_level = replica          # 스트리밍 복제 구성
+# max_wal_senders = 5          # 스트리밍 복제 전송자의 최대 수
 
 # PERFORMANCE
 effective_io_concurrency = 200   # 파일 I/O 수행을 위해 사용할 동시성 레벨
