--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
 
       - name: Create .env file
         run: |
+          rm -f .env
           echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
@@ -29,8 +30,8 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: ".env"
-          target: "/app/.env"
+          source: ".env"  
+          target: "/app/.env" 
 
       - name: Deploy on EC2 with Docker Compose
         uses: appleboy/ssh-action@master
@@ -39,9 +40,9 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /app
+            cd /app || exit 1
             git checkout main
-            git pull origin main  
+            git pull origin main
             docker-compose down 
             docker-compose build 
-            docker-compose up -d 
+            docker-compose up -d
