--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "./.env"
-          target: "/app/.env" 
+          target: "/app" 
 
       - name: Deploy on EC2 with Docker Compose
         uses: appleboy/ssh-action@master
