* fix : testImplementation context and add authority for Docker when build (to fix deploy enviroment error)

--- a/web-application-server/src/test/resources/application-test.yml
+++ b/web-application-server/src/test/resources/application-test.yml
@@ -10,6 +10,14 @@ spring:
       s3:
         bucket: test-bucket
 
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+
+
 
 
 
