--- a/web-application-server/build.gradle
+++ b/web-application-server/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
 	implementation 'software.amazon.awssdk:s3:2.20.19'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
