--- a/web-application-server/src/main/resources/application-dev.yml
+++ b/web-application-server/src/main/resources/application-dev.yml
@@ -54,7 +54,12 @@ logging:
         SQL: DEBUG
         orm.jdbc.bind: TRACE
 
-
+# Swagger
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
 
 
 
