--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,17 @@ server {
         index index.html index.htm;
     }
 
+    # Swagger UI route path
+    location ~ ^/(swagger-ui|webjars|configuration|swagger-resources|v2|v3|csrf) {
+        proxy_pass http://web-application-server:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Prefix "/swagger-ui";
+    }
+
+
     # /api/ route path
     location /api/v1/ {
         proxy_pass http://web-application-server:8080;
