--- a/web-application-server/src/main/resources/application-prod.yml
+++ b/web-application-server/src/main/resources/application-prod.yml
@@ -1,8 +1,3 @@
-server:
-  servlet:
-    # context path
-    context-path: /api/v1
-
 spring:
   application:
     name: web-application-server
@@ -54,7 +49,12 @@ logging:
         SQL: DEBUG
         orm.jdbc.bind: TRACE
 
-
+# Swagger
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
 
 
 
