--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,13 +47,34 @@ jobs:
             docker-compose build 
             docker-compose up -d
             
-      - name: Send success message to Discord
+      - name: Send Success Message to Discord
         if: success()
-        run: |
-          curl -H "Content-Type: application/json" -X POST -d '{"content": "🚀 배포가 **성공**했습니다! 🎉 프론트엔드는 아직인가요?????????????? 😤 (임건 일해라)}' ${{ secrets.DISCORD_WEBHOOK_URL }}
-
-      - name: Send failure message to Discord
+        uses: Ilshidur/action-discord@0.3.2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          DISCORD_USERNAME: WAPP_BOT
+          DISCORD_AVATAR: https://github.com/pknu-wap/WAPP/blob/main/image/icon.png?raw=true
+          DISCORD_EMBEDS: |
+            [
+              { 
+                "title": "🚀 배포가 **성공**했습니다! 🎉",
+                "color": 3066993,
+                "description": "프론트엔드는 아직인가요?????????????? 😤 (임건 일해라)"
+              }
+            ]
+      
+      - name: Send Failure Message to Discord
         if: failure()
-        run: |
-          curl -H "Content-Type: application/json" -X POST -d '{"content": "배포에 실패했습니다. 로그를 확인해주세요."}' ${{ secrets.DISCORD_WEBHOOK_URL }}
-
+        uses: Ilshidur/action-discord@0.3.2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          DISCORD_USERNAME: WAPP_BOT
+          DISCORD_AVATAR: https://github.com/pknu-wap/WAPP/blob/main/image/icon.png?raw=true
+          DISCORD_EMBEDS: |
+            [
+              { 
+                "title": "배포에 실패했습니다.",
+                "color": 15158332,
+                "description": "로그를 확인해주세요."
+              }
+            ]
