--- a/web-application-server/src/main/resources/application-dev.yml
+++ b/web-application-server/src/main/resources/application-dev.yml
@@ -16,6 +16,7 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+      enabled: true
 
   # Database
   datasource:
@@ -61,5 +62,7 @@ springdoc:
     path: /swagger-ui.html
 
 
+server-uri:
+  fitting: ${FITTING_SERVER_URI}
 
 
