--- a/image-classification-worker/Dockerfile
+++ b/image-classification-worker/Dockerfile
@@ -4,6 +4,11 @@ WORKDIR /app
 
 COPY . /app
 
+RUN apt-get update && apt-get install -y curl
+
+
 RUN pip install --no-cache-dir -r requirements.txt
+
+EXPOSE 8000
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
