* fix : increase client body size limit to 10M

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name _;
 
+    client_max_body_size 10M;
+
     # Swagger UI route path
     location ~ ^/(swagger-ui|swagger|webjars|configuration|swagger-resources|v2|csrf) {
                    proxy_pass http://web-application-server:8080;
