--- a/web-application-server/build.gradle
+++ b/web-application-server/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'software.amazon.awssdk:s3:2.20.19'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
