--- a/web-application-server/src/main/resources/application-dev.yml
+++ b/web-application-server/src/main/resources/application-dev.yml
@@ -33,7 +33,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
