--- a/web-application-server/src/main/resources/application-prod.yml
+++ b/web-application-server/src/main/resources/application-prod.yml
@@ -72,3 +72,4 @@ springdoc:
 server-uri:
   fitting: ${FITTING_SERVER_URI_PROD}
   image-classification-worker: ${IMAGE_CLASSIFICATION_SERVER_URI_PROD}
+  domain: ${DOMAIN}
