--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
           echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> .env
           echo "FITTING_SERVER_URI_PROD=${{ secrets.FITTING_SERVER_URI_PROD }}" >> .env
           echo "IMAGE_CLASSIFICATION_SERVER_URI_PROD=${{ secrets.IMAGE_CLASSIFICATION_SERVER_URI_PROD }}" >> .env
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
+          echo "OPENAI_URL=${{ secrets.OPENAI_URL }}" >> .env
+
           
       - name: Copy .env file to EC2
         uses: appleboy/scp-action@v0.1.7
