--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,15 @@ server {
 
     # Spring Boot API route path
     location /api/v1/ {
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type";
+            add_header Access-Control-Max-Age 86400;
+            return 204;  # No Content
+        }
+
+
         proxy_pass http://web-application-server:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
