* deploy : add redirect setting to landing page

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,11 @@ server {
     listen 80;
     server_name _;
 
+    location / {
+        return 301 https://8fit.webflow.io;
+    }
+
+
     client_max_body_size 10M;
 
     # Swagger UI route path
